--- a/_variables.scss
+++ b/_variables.scss
@@ -2,6 +2,7 @@
    $fs-small: 0.8rem;
    $fs-medium: 1rem;
    $fs-between: 2.2rem;
+   $fs-semiLarge: 1.8rem;
    $fs-Large: 2rem;
    $fw-100: 100;
    $fw-300: 300;
