--- a/main.css
+++ b/main.css
@@ -42,21 +42,19 @@ p {
 .contactSide .content p {
   font-weight: 500;
 }
-.contactSide .btnAria {
-  margin-top: 1rem;
-}
-.contactSide .btnAria button {
+.contactSide button {
   width: 130px;
-  min-height: 40px;
+  min-height: 35px;
   background-color: #F50B33;
   color: white;
   font-size: medium;
   font-weight: 700;
+  margin-top: 0.8rem;
   border: none;
   cursor: pointer;
   transition: background-color 0.4s;
 }
-.contactSide .btnAria button:hover {
+.contactSide button:hover {
   background-color: rgb(204, 0, 34);
 }
 .contactSide form {
@@ -79,7 +77,7 @@ p {
   margin-top: 10px;
 }
 
-@media (min-width: 320px) and (max-width: 768px) {
+@media (max-width: 450px) {
   .mainContent {
     text-align: center;
     min-width: 100%;
@@ -96,44 +94,17 @@ p {
     margin: 0;
     max-height: 50%;
   }
+  .contactSide .content h1 {
+    font-size: 1.8rem;
+  }
   .contactSide form {
     align-items: center;
   }
   .contactSide form input {
     width: 80%;
   }
-  .contactSide button {
-    margin-bottom: 1rem;
-  }
-  .photoSide {
-    width: 100%;
-  }
-}
-@media (min-width: 767px) and (max-width: 1084px) {
-  .mainContent {
-    text-align: center;
-    min-width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .content {
-    width: 100%;
-    margin: 0;
-    max-height: 50%;
-  }
-  .content form {
-    align-items: center;
-  }
-  .content form input {
-    width: 55%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .content button {
-    margin-bottom: 1rem;
+  .contactSide form button {
+    width: 315px;
   }
   .photoSide {
     width: 100%;
