--- a/_variables.scss
+++ b/_variables.scss
@@ -9,5 +9,5 @@
    $fw-500: 500;
    $fw-700: 700;
    $clr-primary: #000000;
-   $clr-secondary: #F50B33;
+   $clr-secondary: #ffae00;
    $clr-neutral: white;
